# diploma

./: CMakeLists.txt  KServerRes.txt  KServerRes2.txt  NaiveRes.txt  NaiveRes2.txt  README.md  main.cpp
includes/: FirstSolution.h  KserverInterface.h  Naive.h  SecondSolution.h  ThirdSolution.h
includes/structures/: BinaryLifting.h  ColoringHLD.h  Edge.h  FastLCA.h  FastMoving.h  HLD.h  LadderDecomposition.h  MovingHLD.h  MovingInterface.h  SegmentTree.h  Tree.h
src/: FirstSolution.cpp  KserverInterface.cpp  Naive.cpp  SecondSolution.cpp  ThirdSolution.cpp
src/structures/: BinaryLifting.cpp  ColoringHLD.cpp  Edge.cpp  FastLCA.cpp  FastMoving.cpp  HLD.cpp  LadderDecomposition.cpp  MovingHLD.cpp  MovingInterface.cpp  SegmentTree.cpp  Tree.cpp
stats/: difk_n_1000.txt  difk_n_1e5.txt  difk_n_1e6.txt  difn_k_20.txt
